# mival

./: architecture.mmd  documentation.puml  orders.csv  pyproject.toml  test.ipynb
